--- a/client/src/Components/Waiter/MainWaiter/MainWaiter.module.css
+++ b/client/src/Components/Waiter/MainWaiter/MainWaiter.module.css
@@ -1,11 +1,11 @@
 .layout {
-  height: 98vh;
+  height: 100vh;
   background-image: linear-gradient(
       to right bottom,
-      rgba(200, 225, 249, 0.952),
-      rgba(227, 173, 48, 0.968)
+      rgba(200, 225, 249, 0.861),
+      rgba(227, 173, 48, 0.862)
     ),
-    url('../../../../public/img/main_waiter.jpg');
+    url("../../../../public/img/main_waiter.jpg");
   background-size: cover;
   background-position: top;
   position: relative;
@@ -14,22 +14,24 @@
 .sider {
   background-color: transparent !important;
   margin-top: 90px;
-  
 }
 .menu {
   background-color: transparent !important;
   border-inline-end: none !important;
+  font-family: "Futura";
+  color: rgba(61, 61, 61, 0.954);
+  font-size: 16px;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
 }
 .header {
   background-color: transparent !important;
-  }
+}
 
-  .header_div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
+.header_div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .content {
   background-color: transparent !important;
@@ -37,8 +39,8 @@
   justify-content: center;
   align-items: flex-start;
   flex-direction: row;
-   flex-wrap: wrap;
-   width: 1100px;
+  flex-wrap: wrap;
+  width: 1100px;
 }
 
 .footer {
@@ -51,14 +53,106 @@
 
 .time {
   font-size: 16px;
-  color: rgb(61, 61, 61);
+  color: #fff;
   margin-right: 25px;
   letter-spacing: 1px;
+  font-family: "Futura";
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .welcome {
   margin-left: 50px;
-  font-size: 18px;
-  color: rgb(61, 61, 61);
+  font-size: 22px;
+  color: rgb(255, 255, 255);
   letter-spacing: 1px;
+  font-family: "Futura", sans-serif;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.icon {
+  font-size: 22px !important;
+  border: 2px solid rgba(255, 255, 255, 0.9);
+  border-radius: 50%;
+  padding: 5px;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+@media only screen and (max-width: 1000px) {
+  .sider {
+    margin-top: 5px;
+    position: fixed;
+    z-index: 2;
+    height: 30vh;
+  }
+  .layout_secondary {
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    align-items: center;
+  }
+
+  .time {
+    position: absolute;
+    top: 0%;
+    left: 85%;
+    font-size: 10px;
+  }
+  .content {
+    width: 600px;
+  }
+
+  .welcome {
+    margin-left: 15px;
+    font-size: 12px;
+  }
+
+  .icon {
+    font-size: 18px !important;
+  }
+
+  .menu {
+    font-size: 14px;
+  }
+
+  :global .ant-layout .ant-layout-sider-zero-width-trigger {
+    color: rgba(61, 61, 61, 0.954);
+    font-size: 20px;
+    background: rgb(255, 255, 255);
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .welcome {
+    font-size: 12px;
+  }
+  .time {
+    font-size: 10px;
+    /* margin-right: 5px; */
+    left: 5%;
+  }
+
+  .header_div {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .menu {
+    font-size: 12px;
+    height: 70px;
+  }
+
+  .icon {
+    font-size: 12px !important;
+  }
+
+  .content {
+    width: 500px;
+  }
+
+  :global .ant-layout .ant-layout-sider-zero-width-trigger {
+    color: rgba(61, 61, 61, 0.954);
+    font-size: 20px;
+    background: rgb(255, 255, 255);
+  }
 }
