--- a/client/src/Components/Waiter/LayoutWaiter/OneTable.module.css
+++ b/client/src/Components/Waiter/LayoutWaiter/OneTable.module.css
@@ -17,21 +17,7 @@
 }
 
 .table_first_row_red {
-  /* cursor: pointer;
-  margin-top: 30px;
-  width: 150px;
-  height: 120px;
-  display: flex;
-  justify-content: center;
-  align-items: center; */
   background-color: #e06a6a;
-  /* color: white;
-  font-size: 24px;
-  margin-right: 30px;
-  cursor: pointer;
-  border-radius: 10px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-  transition: all 0.5s ease; */
 }
 
 .icon_dollar {
@@ -55,6 +41,10 @@
   .icon_dollar {
     font-size: 20px;
   }
+
+  .modal {
+    width: 40% !important;
+  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -67,5 +57,9 @@
 
   .icon_dollar {
     font-size: 15px;
+  }
+
+  .modal {
+    width: 60% !important;
   }
 }
