--- a/client/src/Components/Waiter/CurrentOrdersWaiter/OneOrder.module.css
+++ b/client/src/Components/Waiter/CurrentOrdersWaiter/OneOrder.module.css
@@ -5,11 +5,36 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color:  rgba(224, 51, 51, 0.425);
-  color: whitesmoke;
+  background-color: #e06a6a;
+  color: white;
   font-size: 24px;
-  margin-right: 30px ;
+  margin-right: 30px;
   cursor: pointer;
-  
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  transition: all 0.5s ease;
 }
 
+@media only screen and (max-width: 1000px) {
+  .orders {
+    margin-top: 40px;
+    width: 100px;
+    height: 100px;
+  }
+
+  .icon_dollar {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .orders {
+    margin-top: 40px;
+    width: 90px;
+    height: 90px;
+  }
+
+  .icon_dollar {
+    font-size: 15px;
+  }
+}
