--- a/client/src/Components/Waiter/ReservationsWaiter/OneReservationWaiter.module.css
+++ b/client/src/Components/Waiter/ReservationsWaiter/OneReservationWaiter.module.css
@@ -1,24 +1,32 @@
 .data {
   display: flex;
   align-items: center;
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
+}
+
+.reservationBox {
+  margin: 10px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateZ(10px);
 }
 
 .date {
-  color: black;
   font-size: 20px;
   margin-right: 40px;
 }
 
 .time {
   align-self: center;
-  color: black;
   font-size: 20px;
   margin-right: 40px;
 }
 
 .name {
   align-self: center;
-  color: black;
   font-size: 20px;
   margin-right: 40px;
 }
@@ -27,3 +35,60 @@
   margin-right: 40px;
 }
 
+@media only screen and (max-width: 1000px) {
+  .reservationBox {
+    margin: 5px;
+    padding: 15px;
+    border-radius: 10px;
+  }
+
+  .date {
+    font-size: 18px;
+    margin-right: 30px;
+  }
+
+  .time {
+    align-self: center;
+    font-size: 18px;
+    margin-right: 30px;
+  }
+
+  .name {
+    align-self: center;
+    font-size: 18px;
+    margin-right: 30px;
+  }
+
+  .guests {
+    margin-right: 30px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .reservationBox {
+    margin: 5px;
+    padding: 15px;
+    border-radius: 10px;
+  }
+
+  .date {
+    font-size: 18px;
+    margin-right: 30px;
+  }
+
+  .time {
+    align-self: center;
+    font-size: 18px;
+    margin-right: 30px;
+  }
+
+  .name {
+    align-self: center;
+    font-size: 18px;
+    margin-right: 30px;
+  }
+
+  .guests {
+    margin-right: 30px;
+  }
+}
