--- a/client/src/Components/Waiter/ReservationsWaiter/ReservationsWaiter.module.css
+++ b/client/src/Components/Waiter/ReservationsWaiter/ReservationsWaiter.module.css
@@ -4,3 +4,19 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.spin {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.reservations {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 70%;
+}
