--- a/client/src/Components/Waiter/ReservationsWaiter/ReservationsWaiter.module.css
+++ b/client/src/Components/Waiter/ReservationsWaiter/ReservationsWaiter.module.css
@@ -17,6 +17,25 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  width: 80%;
-  height: 70%;
+  width: 90%;
+  height: 80%;
+}
+
+@media only screen and (max-width: 1000px) {
+  .reservations {
+    width: 90%;
+    height: 100%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .reservations {
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 100%;
+  }
 }
