--- a/client/src/Components/Waiter/EditOrder/EditOrder.module.css
+++ b/client/src/Components/Waiter/EditOrder/EditOrder.module.css
@@ -1,82 +1,90 @@
 .menu {
-  display:flex;
+  display: flex;
   flex-direction: column;
-  justify-content: space-between;
   margin-left: 100px;
 }
- .main {
-  width: 520px;
-  height: 582px;
-  justify-content: space-between;
- }
-
+.main {
+  width: 600px;
+  height: 100%;
+}
 
 .section {
   display: flex;
   border: 1px rgb(194, 193, 193) solid;
-  width: 100px;
+  width: 90%;
   height: 50px;
-  background-color:rgba(123, 186, 51, 0.538);
+  background-color: #9ac9a1;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  color: black;
+  color: white;
+  font-size: 24px;
+  margin-right: 30px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  transition: all 0.5s ease;
 }
 
-.sectionClicked {
-  display: flex;
-  border: 1px rgb(194, 193, 193) solid;
-  width: 100px;
-  height: 50px;
-  background-color:rgba(123, 186, 51, 0.946);
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  color: black;
+.menu {
+  height: 280px;
 }
 
 .section:hover {
-  background-color:rgba(62, 92, 29, 0.946);
+  background-color: rgba(62, 92, 29, 0.946);
+  transform: translateY(-5px);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
 }
 
 .outlet {
-  margin-top: 80px;
-  height: 365px;
+  margin-top: 10px;
+  height: 100%;
+  width: 100%;
 }
 
 .data {
   display: flex;
-  align-items: center;
   justify-content: space-around;
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
+  font-size: 18px;
 }
 
 .button_done {
-  /* margin-top: 100px; */
   display: flex;
   justify-content: center;
   justify-items: end;
-  align-self: center;
-  background-color:rgba(123, 186, 51, 0.946);
+  align-self: flex-end;
+  background-color: #e06a6a;
+  font-family: "Futura", sans-serif;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  transition: all 0.5s ease;
 }
 
 .button_done:hover {
-  background-color:rgba(67, 103, 26, 0.946) !important;
+  background-color: #e06a6ab9 !important;
 }
 
 .button_done_div {
   display: flex;
-  justify-content: center;
-  justify-items: end;
-  align-self: center;
+  position: absolute;
+  top: 90%;
+  left: 45%;
+  transform: translate(-50%, -50%);
 }
 
 .main_order {
   margin-left: 35px;
   display: flex;
-  width: 320px;
-  height: 570px;
+  width: 350px;
+  height: 100%;
   flex-direction: column;
   justify-content: space-between;
+  border: 1px rgba(5, 5, 5, 0.475) solid;
+  padding: 8px;
+  border-radius: 10px;
+  background-color: rgba(250, 235, 215, 0.617);
 }
 
 .total_sum {
@@ -89,6 +97,8 @@
   width: 55px;
   margin-left: 5px;
   background-color: transparent;
+  font-family: "Futura", sans-serif;
+  font-size: 18px;
 }
 
 .name {
@@ -101,11 +111,17 @@
   margin-top: 15px;
 }
 
+.main_order {
+  font-family: "Futura", sans-serif;
+  color: rgba(61, 61, 61, 0.954);
+}
+
 .item {
   display: flex;
   margin-top: 15px;
   justify-content: space-between;
   position: relative;
+  color: rgba(61, 61, 61, 0.954);
 }
 
 .icons {
@@ -134,13 +150,11 @@
   width: 40px;
   margin-right: 10px;
   text-align: center;
-  
 }
 
 .total {
   width: 60px;
   text-align: center;
-  
 }
 
 .item_name {
@@ -167,7 +181,7 @@
 .info {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .info_name {
@@ -182,11 +196,3 @@
   display: flex;
   align-items: center;
 }
-
-
-
-
-
-
-
-
