--- a/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
+++ b/client/src/Components/Waiter/CreateOrder/CreateOrder.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   margin-left: 100px;
+  height: 280px;
 }
 .main {
   width: 600px;
@@ -25,10 +26,6 @@
   border-radius: 10px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   transition: all 0.5s ease;
-}
-
-.menu {
-  height: 280px;
 }
 
 .section:hover {
@@ -195,4 +192,43 @@
 .info_guests {
   display: flex;
   align-items: center;
+}
+
+@media only screen and (max-width: 1400px) {
+  .menu {
+    margin-left: 0px;
+    height: 200px;
+  }
+
+  .main {
+    width: 380px;
+  }
+
+  .section {
+    width: 90%;
+    height: 40px;
+    font-size: 18px;
+    margin-right: 20px;
+    margin-bottom: 5px;
+  }
+
+  .outlet {
+    margin-top: 8px;
+  }
+
+  .data {
+    font-size: 16px;
+  }
+
+  .main_order {
+    margin-left: 10px;
+    width: 300px;
+  }
+  .input_guests {
+    font-size: 16px;
+  }
+
+  .icons {
+    left: 105%;
+  }
 }
