--- a/client/src/Components/Waiter/CreateOrder/Menu/MenuCategories.module.css
+++ b/client/src/Components/Waiter/CreateOrder/Menu/MenuCategories.module.css
@@ -33,3 +33,17 @@
 .outlet {
   margin-top: 40px;
 }
+
+@media only screen and (max-width: 1400px) {
+  .category {
+    width: 80px;
+    height: 40px;
+    font-size: 14px;
+    margin-right: 10px;
+    margin-bottom: 5px;
+  }
+
+  .outlet {
+    margin-top: 30px;
+  }
+}
