--- a/client/src/Components/Waiter/CreateOrder/Menu/MenuItems.module.css
+++ b/client/src/Components/Waiter/CreateOrder/Menu/MenuItems.module.css
@@ -27,3 +27,13 @@
   transform: translateY(-5px);
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
 }
+
+@media only screen and (max-width: 1400px) {
+  .item {
+    width: 100px;
+    height: 40px;
+    font-size: 12px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+  }
+}
